--- a/src/CounselingAdvisor/src/main/resources/templates/CounselingAdvisor.html
+++ b/src/CounselingAdvisor/src/main/resources/templates/CounselingAdvisor.html
@@ -203,7 +203,7 @@
 					<div class="chat">
 						<p class="chat__msg" th:utext="${welcomeMessage}"></p>
 						<p class="chat__msg">업무를 도와드릴 Advisor입니다. 무엇을 도와 드릴까요?</p>
-						<p class="chat__msg">1.휴가 2.회의실 예약 3.근속관련 4.출장 및 외근 신청<br>5.공지사항 조회 6.증명서 발급 7.사원정보 조회 중 하나를 입력해주세요.</p>
+						<p class="chat__msg">1. 연차 2. 회의실 3. 근무 4. 출장<br>5. 공지사항 6. 증명서 7. 사원 정보 조회 중 하나를 입력해주세요.</p>
 						<p class="date"></p>
 					</div>
 				</div>
